[gd_scene load_steps=5 format=3 uid="uid://b7jj51hv4hwqq"]

[ext_resource type="PackedScene" uid="uid://b2loam5g5ekg5" path="res://source/ui/country_button.tscn" id="1_84m4d"]
[ext_resource type="Script" uid="uid://cmnn3qx8p8xva" path="res://source/ui/country_and_relationship.gd" id="1_j5wfm"]
[ext_resource type="Script" uid="uid://gxrluxci1kts" path="res://source/ui/relationship_preset_label.gd" id="3_c35fe"]
[ext_resource type="Script" uid="uid://baay036rblhtb" path="res://source/ui/relationship_preset_label_update.gd" id="4_uhlps"]

[node name="CountryAndRelationship" type="Control"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_j5wfm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CountryButton" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_84m4d")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="NameRoot" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
mouse_filter = 1

[node name="CountryName" type="Label" parent="MarginContainer/HBoxContainer/NameRoot"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Country Name"
vertical_alignment = 1
clip_text = true

[node name="PresetRoot" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
mouse_filter = 1

[node name="RelationshipPresetLabel" type="Label" parent="MarginContainer/HBoxContainer/PresetRoot"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.7
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "(Best friends)"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("3_c35fe")

[node name="RelationshipPresetLabelUpdate" type="Node" parent="MarginContainer/HBoxContainer/PresetRoot/RelationshipPresetLabel" node_paths=PackedStringArray("label")]
unique_name_in_owner = true
script = ExtResource("4_uhlps")
label = NodePath("..")
